--- a/package.json
+++ b/package.json
@@ -9,22 +9,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
+    "antd": "^4.22.5",
     "axios": "^0.27.2",
     "carousel-react-rcdev": "^0.0.5",
-    "nuka-carousel": "^5.2.0",
+    "crypto": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-image-magnify": "^2.7.4",
+    "react-items-carousel": "^2.8.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/antd": "^1.0.0",
     "@types/axios": "^0.14.0",
+    "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-icons": "^3.0.0",
+    "@types/react-image-magnify": "^2.7.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26",
