feat: add new library to project

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "carousel-react-rcdev": "^0.0.5",
     "crypto": "^1.0.1",
     "react": "^18.2.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-image-magnify": "^2.7.4",
@@ -30,9 +31,11 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
+    "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^18.0.6",
     "@types/react-icons": "^3.0.0",
     "@types/react-image-magnify": "^2.7.1",
+    "@types/react-payment-inputs": "^1.1.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.26",
