--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.tsx\" --write \"src/**/*.ts\" ",
+    "lint": "eslint \"src/**/*.tsx\" --fix"
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
@@ -17,6 +19,7 @@
     "axios": "^0.27.2",
     "carousel-react-rcdev": "^0.0.5",
     "crypto": "^1.0.1",
+    "moment-timezone": "^0.5.37",
     "react": "^18.2.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
@@ -30,6 +33,7 @@
   "devDependencies": {
     "@types/antd": "^1.0.0",
     "@types/axios": "^0.14.0",
+    "@types/moment-timezone": "^0.5.30",
     "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
     "@types/react-credit-cards": "^0.8.1",
@@ -39,7 +43,17 @@
     "@types/react-payment-inputs": "^1.1.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@vitejs/plugin-react": "^2.0.1",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import-helpers": "^1.2.1",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "7.28.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   },
